# mcp-studio

./: .gitignore  README.md
apps/crawler/: .env.example  README.md  pyproject.toml
apps/crawler/scripts/: check_groq.py
apps/crawler/src/mcp_crawler/: __init__.py  classifier.py  config.py  crawler.py  db.py  flows.py  github.py
apps/web/: next.config.ts  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/app/api/recommend/: route.ts
apps/web/app/ask/: page.tsx
apps/web/app/browse/: page.tsx
apps/web/app/server/[owner]/[name]/: opengraph-image.tsx  page.tsx
apps/web/components/: AskChat.tsx  FloatingAskBot.tsx  Header.tsx  InstallTabs.tsx  LangSwitcher.tsx  Logo.tsx  SearchBar.tsx  ServerCard.tsx
apps/web/lib/: db.ts  env.ts  i18n.ts  lang-server.ts  rate-limit.ts  recommender.ts
apps/web/scripts/: check-pg.mjs
