[project]
name = "mcp-crawler"
version = "0.1.0"
description = "Crawler que indexa servidores MCP desde GitHub a Postgres"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Antonio Jesús" }]
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "prefect>=2.20,<3.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "loguru>=0.7",
    "anthropic>=0.40",
    "markdown-it-py>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_crawler"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
